5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1758_672.log
== TEST (2019-05-23 10:18:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = array(dtype((input("Digite aqui o seu vetor: ")))
-- ERROR:
File "XXXX", line 4
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:18:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = array(dtype(input("Digite aqui o seu vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:19:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = array(dtype(input("Digite aqui o seu vetor: ")))
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("Digite aqui o numero: "))
vet = one(num< dtype=int)
print(vet)
-- ERROR:
File "XXXX", line 4
    vet = one(num< dtype=int)
             ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("Digite aqui o numero: "))
vet = ones(num< dtype=int)
print(vet)
-- ERROR:
File "XXXX", line 4
    vet = ones(num< dtype=int)
              ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("Digite aqui o numero: "))
vet = ones(num, dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:21:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("Digite aqui o numero: "))
vet = ones(num, dtype=int)
print(vet)
-- EXECUTION TIME:
0.406497
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
